<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="user_name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>
    <string name="email_subject">JustJava order for <xliff:g id="name" example="Emily Clark">%s</xliff:g></string>
    <string name="order_name">Name: <xliff:g id="name" example="Emily Clark">%s</xliff:g></string>
    <string name="toast_message_inc">"You cannot have more than 100 coffees"</string>
    <string name="toast_message_dec">"You cannot have less than 1 coffee"</string>
    <string name="order_whipped_cream">Add Whipped Cream?
        <xliff:g id="addWhippedCream" example="true">%s</xliff:g>
    </string>
    <string name="order_chocolate">Add Chocolate?
        <xliff:g id="addChocolate" example="true">%s</xliff:g>
    </string>
    <string name="order_quantity">Quantity:
        <xliff:g id="quantity" example="2">%d</xliff:g>
    </string>
    <string name="order_total_sum">Total:
        <xliff:g id="price" example="$10">%s</xliff:g>
    </string>
    <string name="thank_you">Thank you!</string>
    <string name="app_name">Just Java</string>
</resources>